--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>LO1E-SWD4 Snake</title>
 </head>
 <body>
-    <canvas width="400" height="400"></canvas>
+    <canvas width="400" height="400" id="Snake"></canvas>
 </body>
 </html>
