--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LO1E-SWD4 Snake</title>
+
 </head>
 <body>
-    <canvas width="400" height="400" id="Snake"></canvas>
+    <canvas width="400" height="400" id="snake"></canvas>
+    <script src="snake.js"></script>
 </body>
 </html>
